feat: Implementado endpoint de criação de médico, testes unitários e documentação
